--- a/index.html
+++ b/index.html
@@ -5,7 +5,10 @@
   <meta name="viewport" content="width=device-width,initial-scale=1">
   <title>Menuju TikTok...</title>
 
-  <!-- Auto redirect (0 detik) -->
+  <!-- Tag verifikasi Google Search Console -->
+  <meta name="google-site-verification" content="60TreAIViUexQV1aSoa8V5PVdEBBa0UNfqDPAVkP0aQ" />
+
+  <!-- Redirect ke TikTok -->
   <meta http-equiv="refresh" content="0;url=https://www.tiktok.com/@kholiddzz?_t=ZS-8zHuLAoBVFl&_r=1">
 
   <style>
@@ -26,7 +29,6 @@
   <p>Menuju TikTok...</p>
 
   <script>
-    // fallback jika meta refresh gagal
     window.location.replace("https://www.tiktok.com/@kholiddzz?_t=ZS-8zHuLAoBVFl&_r=1");
   </script>
 </body>
