--- a/index.html
+++ b/index.html
@@ -6,10 +6,10 @@
   <title>Menuju TikTok...</title>
 
   <!-- Tag verifikasi Google Search Console -->
-  <meta name="google-site-verification" content="60TreAIViUexQV1aSoa8V5PVdEBBa0UNfqDPAVkP0aQ" />
+  <meta name="google-site-verification" content="PE9CpThHQktT8Kvc_df7wze93QUwEw23ZiCJUemA4Go" />
 
-  <!-- Redirect ke TikTok -->
-  <meta http-equiv="refresh" content="0;url=https://www.tiktok.com/@kholiddzz?_t=ZS-8zHuLAoBVFl&_r=1">
+  <!-- Redirect otomatis ke TikTok -->
+  <meta http-equiv="refresh" content="3;url=https://www.tiktok.com/@kholiddzz?_t=ZS-8zHuLAoBVFl&_r=1">
 
   <style>
     body{
@@ -22,14 +22,32 @@
       color:#fff;
       font-family:sans-serif;
       text-align:center;
+      flex-direction:column;
+    }
+    .loader {
+      border: 4px solid #333;
+      border-top: 4px solid #fff;
+      border-radius: 50%;
+      width: 40px;
+      height: 40px;
+      animation: spin 1s linear infinite;
+      margin-top:15px;
+    }
+    @keyframes spin {
+      0% { transform: rotate(0deg); }
+      100% { transform: rotate(360deg); }
     }
   </style>
 </head>
 <body>
-  <p>Menuju TikTok...</p>
+  <h2>Menuju TikTok...</h2>
+  <div class="loader"></div>
 
   <script>
-    window.location.replace("https://www.tiktok.com/@kholiddzz?_t=ZS-8zHuLAoBVFl&_r=1");
+    // fallback redirect via JS
+    setTimeout(function(){
+      window.location.replace("https://www.tiktok.com/@kholiddzz?_t=ZS-8zHuLAoBVFl&_r=1");
+    }, 3000);
   </script>
 </body>
 </html>
